[package]
name = "lumi"
version = "0.1.0"
authors = ["Martin <martin@martinb.dev>"]
readme = "README.md"
repository = "https://github.com/martin-bucinskas/lumi"
keywords = ["lumi", "os"]
edition = "2021"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300

[dependencies]
bootloader = { version = "0.9.23", features = ["map_physical_memory"]}
spin = "0.9.4"
volatile = "0.2.6"
uart_16550 = "0.2.18"
x86_64 = "0.14.10"
pic8259 = "0.10.2"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.9.1"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.ansi-parser]
version = "0.8.0"
default-features = false
